<resources>
    <string name="app_name">PhishApp</string>

    <!-- Login Fragment -->
    <string name="editText_login_email">Email</string>
    <string name="editText_login_password">Password</string>
    <string name="button_login_register">REGISTER</string>
    <string name="button_login_signIn">SIGN IN</string>


    <!-- Success Fragment -->


    <!-- Register Fragment -->
    <string name="editText_register_email">Email</string>
    <string name="editText_register_password">Password</string>
    <string name="editText_register_rePassword">Retype Password</string>
    <string name="button_register_register">REGISTER</string>

    <!-- Actions -->
    <string name="action_link">Full Post</string>


    <!-- Titles -->
    <string name="title_home">Home</string>
    <string name="title_blogs">Blogs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
